Begin work page

--- a/home.html
+++ b/home.html
@@ -4,16 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <title>Harry Tones</title>
+    <title>Harry Oghonyon</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
     <header>
       <nav class="nav-wrap">
         <div class="header-wrap">
-          <p class="time-location">5:50, Lagos, NG</p>
-          <button class="main-btn">Resume</button>
+          <p class="time-location">5:50 Lagos, NG</p>
+          <a
+            href="https://drive.google.com/file/d/17YaFGgeKxcM7r_ytoRYRtatku-OvnxOs/view?usp=sharing"
+            target="_blank"
+          >
+            <button class="main-btn">Resume</button>
+          </a>
         </div>
       </nav>
     </header>
@@ -37,17 +41,19 @@
       </div>
     </main>
 
-    <div class="footer-nav-wrap">
-      <div class="footer-nav-links-wrap">
-        <a class="links" href="/work.html">Work</a>
-        <a class="links" href="/about.html">About</a>
-        <a class="links" href="https://www.linkedin.com/in/harry-oghonyon/"
-          >Linkedin</a
-        >
-        <a class="links email-link" href="mailto:harrytones.design@gmail.com"
-          >Email</a
-        >
+    <footer>
+      <div class="footer-nav-wrap">
+        <div class="footer-nav-links-wrap">
+          <a class="links" href="/work.html">Work</a>
+          <a class="links" href="/about.html">About</a>
+          <a class="links" href="https://www.linkedin.com/in/harry-oghonyon/"
+            >Linkedin</a
+          >
+          <a class="links email-link" href="mailto:harrytones.design@gmail.com"
+            >Email</a
+          >
+        </div>
       </div>
-    </div>
+    </footer>
   </body>
 </html>
