--- a/work.html
+++ b/work.html
@@ -25,24 +25,97 @@
 
         <div class="work-margin">
           <div class="work-container">
-            <div class="work-wrap">
-              <div class="header-work-details-wrap">
-                <h3 class="works-name">Krypt Labs</h3>
-                <div class="work-detials-wrap">
-                  <p class="work-details">FEB - MAR ‘23</p>
-                  <p class="work-details">Design & DEV</p>
+            <div class="work-padding">
+              <div class="work-wrap">
+                <div class="header-work-details-wrap">
+                  <h3 class="works-name">Krypt Labs</h3>
+                  <div class="work-detials-wrap">
+                    <p class="work-details">FEB - MAR ‘23</p>
+                    <p class="work-details">DESIGN & DEV</p>
+                  </div>
+                </div>
+
+                <div class="work-button-wrap">
+                  <button class="main-btn">Live Website</button>
+                  <button class="main-btn">Case Study</button>
                 </div>
               </div>
 
-              <div class="work-button-wrap">
-                <button class="main-btn">Live Website</button>
-                <button class="main-btn">Case Study</button>
+              <div class="work-project-desc-container">
+                <div class="work-img-wrap" id="krypt"></div>
+
+                <div class="work-about-role-container">
+                  <div class="work-about-role-wrap">
+                    <div class="work-about-sharp-radius">
+                      <div class="badge-container">
+                        <span class="work-about-role-btn badge-text"
+                          >ABOUT</span
+                        >
+                        <svg
+                          width="48"
+                          height="24"
+                          viewBox="0 0 48 24"
+                          fill="none"
+                        >
+                          <g clip-path="url(#clip0_225_76)">
+                            <path
+                              d="M7.237 23.5L0.5 16.764V7.237L7.237 0.5H40.763L47.5 7.237V16.764L40.764 23.5H7.237Z"
+                              stroke="#484B45"
+                            />
+                          </g>
+                          <defs>
+                            <clipPath id="clip0_225_76">
+                              <rect width="48" height="24" fill="white" />
+                            </clipPath>
+                          </defs>
+                        </svg>
+                      </div>
+                    </div>
+                    <p class="work-about-role-desc">
+                      A RANDOM DESIGN & DEVELOPMENT EXPLORATION I HAD IN MIND.
+                      WORKING ON THIS PROJECT, I WAS ABLE TO PUT MY DESIGN
+                      SKILLS TO THE TEST AND EVENTUALLY CONVERTED MY DESIGNS TO
+                      WORKING CODE.
+                    </p>
+                  </div>
+
+                  <div class="work-about-role-wrap work-about-role-wrap-botm">
+                    <div class="work-about-sharp-radius">
+                      <div class="badge-container">
+                        <span class="work-about-role-btn badge-text">ROLE</span>
+                        <svg
+                          width="48"
+                          height="24"
+                          viewBox="0 0 48 24"
+                          fill="none"
+                        >
+                          <g clip-path="url(#clip0_225_76)">
+                            <path
+                              d="M7.237 23.5L0.5 16.764V7.237L7.237 0.5H40.763L47.5 7.237V16.764L40.764 23.5H7.237Z"
+                              stroke="#484B45"
+                            />
+                          </g>
+                          <defs>
+                            <clipPath id="clip0_225_76">
+                              <rect width="48" height="24" fill="white" />
+                            </clipPath>
+                          </defs>
+                        </svg>
+                      </div>
+                    </div>
+                    <p class="work-about-role-desc">
+                      UI DESIGN <br />
+                      PROTOTYPING <br />
+                      FRONT-END DEVELOPMENT
+                    </p>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
 
-          <div class="work-container work-container-margin">
-            <div class="work-wrap work-wrap-no-border">
+          <!-- <div class="work-container work-container-margin">
+            <div class="work-padding work-padding-no-border">
               <div class="header-work-details-wrap">
                 <h3 class="works-name">Wellfed</h3>
                 <div class="work-detials-wrap">
@@ -56,9 +129,10 @@
                 <button class="main-btn">Case Study</button>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </main>
+    <script src="./assets/js/work.js"></script>
   </body>
 </html>
