Update work page styles

--- a/work.html
+++ b/work.html
@@ -617,6 +617,11 @@
             <img src="/assets/img/Spotify Vector.svg" alt="" />
             <p class="spotify-txt">My Spotify Playlist</p>
           </div>
+          <div class="social-links-wrap">
+            <a class="social-links social-links-1 hero-p" href="">Twitter,</a>
+            <a class="social-links social-links-2 hero-p" href="">Linkedin,</a>
+            <a class="social-links social-links-3 hero-p" href="">Instagram</a>
+          </div>
           <button onclick="scrollToTop()" class="back-to-top-btn">
             Back to top
           </button>
