Update footer link styles

--- a/work.html
+++ b/work.html
@@ -620,7 +620,7 @@
           <div class="social-links-wrap">
             <a class="social-links social-links-1 hero-p" href="">Twitter,</a>
             <a class="social-links social-links-2 hero-p" href="">Linkedin,</a>
-            <a class="social-links social-links-3 hero-p" href="">Instagram</a>
+            <a class="social-links social-links-3 hero-p" href="">Github</a>
           </div>
           <button onclick="scrollToTop()" class="back-to-top-btn">
             Back to top
