Update mobile footer style

--- a/home.html
+++ b/home.html
@@ -33,9 +33,14 @@
             </h1>
             <p class="hero-p">
               Currently sitting at the crossroads of mobile & web design, user
+              experience and frontend development creating products that drives
+              positive change and fosters a brighter future.
+            </p>
+            <!-- <p class="hero-p">
+              Currently sitting at the crossroads of mobile & web design, user
               experience and frontend development. Currently doing the most one
               pixel at a time.
-            </p>
+            </p> -->
           </div>
         </section>
       </div>
