--- a/work.html
+++ b/work.html
@@ -34,10 +34,10 @@
           </div>
           <h3 class="works-block-txt works-block-txt-middle">2022-23</h3>
         </div>
-        <p class="work-block-p hero-p">
+        <!-- <p class="work-block-p work-block-p-desktop-display-none hero-p">
           Empowering individuals and communities through impactful work that
           drives positive change and fosters a brighter future.
-        </p>
+        </p> -->
       </div>
 
       <!-- Featured Works -->
@@ -617,10 +617,24 @@
             <img src="/assets/img/Spotify Vector.svg" alt="" />
             <p class="spotify-txt">My Spotify Playlist</p>
           </div>
-          <div class="social-links-wrap">
-            <a class="social-links social-links-1 hero-p" href="">Twitter,</a>
-            <a class="social-links social-links-2 hero-p" href="">Linkedin,</a>
-            <a class="social-links social-links-3 hero-p" href="">Github</a>
+          <div class="social-links-container">
+            <div class="social-links-wrap">
+              <div class="link-wrap link-wrap-1">
+                <a class="social-links social-links-1 hero-p" href=""
+                  >Twitter</a
+                >
+                <span class="social-links hero-p">,</span>
+              </div>
+              <div class="link-wrap link-wrap-2">
+                <a class="social-links social-links-2 hero-p" href=""
+                  >Linkedin</a
+                >
+                <span class="social-links hero-p">,</span>
+              </div>
+              <div class="link-wrap link-wrap-3">
+                <a class="social-links social-links-3 hero-p" href="">Github</a>
+              </div>
+            </div>
           </div>
           <button onclick="scrollToTop()" class="back-to-top-btn">
             Back to top
@@ -635,6 +649,33 @@
                 alt=""
               />
             </a>
+          </div>
+        </div>
+
+        <div class="mobile-fotter-links-wrap">
+          <div class="mobile-links-padding">
+            <div class="mobile-links-wrap">
+              <div class="social-links-wrap">
+                <div class="link-wrap link-wrap-1">
+                  <a class="social-links social-links-1 hero-p" href=""
+                    >Twitter</a
+                  >
+                  <span class="social-links hero-p">,</span>
+                </div>
+                <div class="link-wrap link-wrap-2">
+                  <a class="social-links social-links-2 hero-p" href=""
+                    >Linkedin</a
+                  >
+                  <span class="social-links hero-p">,</span>
+                </div>
+                <div class="link-wrap link-wrap-3">
+                  <a class="social-links social-links-3 hero-p" href=""
+                    >Github</a
+                  >
+                </div>
+              </div>
+              <p class="hero-p copytxt">©2023</p>
+            </div>
           </div>
         </div>
       </footer>
