Update about page design for mobile, tab and desktop

--- a/about.html
+++ b/about.html
@@ -11,12 +11,202 @@
     <header>
       <nav class="nav-wrap">
         <div class="header-wrap">
-          <p class="time-location">5:50 Lagos, NG</p>
+          <div class="time-location-wrap">
+            <span class="time-location">5:50</span>
+            <p class="time-location location-txt">Lagos, NG</p>
+          </div>
           <a href="./home.html">
             <button class="main-btn">Back</button>
           </a>
         </div>
       </nav>
     </header>
+
+    <main>
+      <section class="intro-container">
+        <div class="intro-block-wrap">
+          <div class="intro-block">
+            <div class="intro-txt-wrap intro-txt-wrap-1">
+              <span class="intro-block-txt">HELLO!</span>
+            </div>
+            <div class="intro-txt-img-flex intro-txt-img-flex-1">
+              <span class="intro-block-txt">I'M HARRY OGHONYON</span>
+              <span class="intro-img-wrap">
+                <img
+                  class="intro-img"
+                  src="./assets/img/Info img small.png"
+                  alt=""
+                />
+              </span>
+            </div>
+
+            <div class="intro-txt-container-2">
+              <div class="intro-txt-img-flex intro-txt-img-flex-2">
+                <span class="intro-block-txt">HELLO! I'M HARRY OGHONYON</span>
+                <span class="intro-img-wrap">
+                  <img
+                    class="intro-img"
+                    src="./assets/img/Info img small.png"
+                    alt=""
+                  />
+                </span>
+              </div>
+            </div>
+            <div class="intro-txt-block-margin">
+              <span class="intro-block-txt intro-block-txt-1"
+                >A DESIGNER & FRONT-END</span
+              >
+            </div>
+            <div class="intro-txt-wrap">
+              <span class="intro-block-txt">DEV DOING THE MOST.</span>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- <div class="me-wrap-margin-top">
+        <div class="me-wrap-padding">
+          <div class="me-span-wrap">
+            <span class="me-span">ME</span>
+          </div>
+
+          <p class="hero-p about-me-txt">
+            I am a product designer & front-end developer based out of Lagos.
+            Started designing out of curiosity and my fascination of the finer
+            details of products. 3 years ago, I kicked off my design career
+            learning how design mobile apps, websites and utilize design
+            systems. Out of my curiosity and wanting to build my designs, I
+            learnt front-end development languages such as HTML, CSS and
+            JavaScript. When I’m not designing or writing code you can find me
+            in the swimming pool doing some crazy moves, listening to music or
+            watching an interesting movie.
+          </p>
+        </div>
+      </div> -->
+
+      <div class="about-badge-container">
+        <div class="about-badge-wrap-padding">
+          <div class="about-badge-wrap">
+            <div class="badge-container">
+              <span class="work-about-role-btn badge-text">ABOUT</span>
+              <svg width="48" height="24" viewBox="0 0 48 24" fill="none">
+                <g clip-path="url(#clip0_225_76)">
+                  <path
+                    d="M7.237 23.5L0.5 16.764V7.237L7.237 0.5H40.763L47.5 7.237V16.764L40.764 23.5H7.237Z"
+                    stroke="#484B45"
+                  />
+                </g>
+                <defs>
+                  <clipPath id="clip0_225_76">
+                    <rect width="48" height="24" fill="white" />
+                  </clipPath>
+                </defs>
+              </svg>
+            </div>
+
+            <div class="badge-container">
+              <span class="work-about-role-btn badge-text">ME</span>
+              <svg width="48" height="24" viewBox="0 0 48 24" fill="none">
+                <g clip-path="url(#clip0_225_76)">
+                  <path
+                    d="M7.237 23.5L0.5 16.764V7.237L7.237 0.5H40.763L47.5 7.237V16.764L40.764 23.5H7.237Z"
+                    stroke="#484B45"
+                  />
+                </g>
+                <defs>
+                  <clipPath id="clip0_225_76">
+                    <rect width="48" height="24" fill="white" />
+                  </clipPath>
+                </defs>
+              </svg>
+            </div>
+          </div>
+
+          <div class="about-p-wrap">
+            <p class="about-p">
+              I am a product designer & front-end developer based out of Lagos.
+              Started designing out of curiosity and my fascination of the finer
+              details of products. 3 years ago, I kicked off my design career
+              learning how design mobile apps, websites and utilize design
+              systems. Out of my curiosity and wanting to build my designs, I
+              learnt front-end development languages such as HTML, CSS and
+              JavaScript. When I’m not designing or writing code you can find me
+              in the swimming pool doing some crazy moves or watching an
+              interesting movie.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="skills-contianer">
+        <div class="skills-wrap">
+          <div class="about-badge-wrap">
+            <div class="badge-container">
+              <span class="work-about-role-btn badge-text">SKILLS</span>
+              <svg width="48" height="24" viewBox="0 0 48 24" fill="none">
+                <g clip-path="url(#clip0_225_76)">
+                  <path
+                    d="M7.237 23.5L0.5 16.764V7.237L7.237 0.5H40.763L47.5 7.237V16.764L40.764 23.5H7.237Z"
+                    stroke="#484B45"
+                  />
+                </g>
+                <defs>
+                  <clipPath id="clip0_225_76">
+                    <rect width="48" height="24" fill="white" />
+                  </clipPath>
+                </defs>
+              </svg>
+            </div>
+
+            <div class="badge-container">
+              <span class="work-about-role-btn badge-text">TOOLS</span>
+              <svg width="48" height="24" viewBox="0 0 48 24" fill="none">
+                <g clip-path="url(#clip0_225_76)">
+                  <path
+                    d="M7.237 23.5L0.5 16.764V7.237L7.237 0.5H40.763L47.5 7.237V16.764L40.764 23.5H7.237Z"
+                    stroke="#484B45"
+                  />
+                </g>
+                <defs>
+                  <clipPath id="clip0_225_76">
+                    <rect width="48" height="24" fill="white" />
+                  </clipPath>
+                </defs>
+              </svg>
+            </div>
+          </div>
+
+          <div class="skills-container-flex">
+            <div class="skills-p-wrap">
+              <p class="skills-p about-p">UX Research</p>
+              <p class="skills-p about-p">UI Design</p>
+              <p class="skills-p about-p">Mobile App Design</p>
+              <p class="skills-p about-p">Website Design</p>
+            </div>
+
+            <div class="skills-p-wrap">
+              <p class="skills-p about-p">Front-end Development</p>
+              <p class="skills-p about-p">HTML</p>
+              <p class="skills-p about-p">CSS</p>
+              <p class="skills-p about-p">JavaScript</p>
+            </div>
+
+            <div class="skills-p-wrap">
+              <p class="skills-p about-p">Figma</p>
+              <p class="skills-p about-p">FigJam</p>
+              <p class="skills-p about-p">Framer</p>
+              <p class="skills-p about-p">Adobe Illustrator</p>
+            </div>
+
+            <div class="skills-p-wrap">
+              <p class="skills-p about-p">Vs Code</p>
+              <p class="skills-p about-p">Git</p>
+              <p class="skills-p about-p">Github</p>
+              <p class="skills-p about-p">Netlify</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
