--- a/work.html
+++ b/work.html
@@ -11,7 +11,10 @@
     <header>
       <nav class="nav-wrap">
         <div class="header-wrap">
-          <p class="time-location">5:50 Lagos, NG</p>
+          <div class="time-location-wrap">
+            <span class="time-location">5:50</span>
+            <p class="time-location location-txt">Lagos, NG</p>
+          </div>
           <a href="./home.html">
             <button class="main-btn">Back</button>
           </a>
