Update about page design

--- a/about.html
+++ b/about.html
@@ -105,7 +105,7 @@
             </div>
 
             <div class="badge-container">
-              <span class="work-about-role-btn badge-text">ME</span>
+              <span class="work-about-role-btn badge-text">MYSELF</span>
               <svg width="48" height="24" viewBox="0 0 48 24" fill="none">
                 <g clip-path="url(#clip0_225_76)">
                   <path
@@ -207,6 +207,110 @@
           </div>
         </div>
       </div>
+
+      <div class="my-img-container">
+        <div class="my-img-wrap">
+          <img
+            class="my-img my-img-1"
+            src=".//assets/img/me pic 1.png"
+            alt=""
+          />
+          <img
+            class="my-img my-img-2"
+            src=".//assets/img/me pic 2.png"
+            alt=""
+          />
+          <img
+            class="my-img my-img-3"
+            src=".//assets/img/me pic 3.png"
+            alt=""
+          />
+        </div>
+      </div>
+
+      <!-- Email Block -->
+
+      <div class="email-block-container">
+        <p class="email-txt">
+          Up for collaboration and work? Send an email to
+          <a href="mailto:harrytones.design@gmail.com"
+            ><span class="email-txt-link">harrytones.design@gmail.com</span></a
+          >
+        </p>
+      </div>
+
+      <!-- End -->
+
+      <!-- Spotify Playlist & Up Block -->
+
+      <footer>
+        <div class="spotify-back-up-wrap">
+          <div class="spotify-playlist-wrap">
+            <img src="/assets/img/Spotify Vector.svg" alt="" />
+            <p class="spotify-txt">My Spotify Playlist</p>
+          </div>
+          <div class="social-links-container">
+            <div class="social-links-wrap">
+              <div class="link-wrap link-wrap-1">
+                <a class="social-links social-links-1 hero-p" href=""
+                  >Twitter</a
+                >
+                <span class="social-links hero-p">,</span>
+              </div>
+              <div class="link-wrap link-wrap-2">
+                <a class="social-links social-links-2 hero-p" href=""
+                  >Linkedin</a
+                >
+                <span class="social-links hero-p">,</span>
+              </div>
+              <div class="link-wrap link-wrap-3">
+                <a class="social-links social-links-3 hero-p" href="">Github</a>
+              </div>
+            </div>
+          </div>
+          <button onclick="scrollToTop()" class="back-to-top-btn">
+            Back to top
+          </button>
+
+          <div class="arrow-back-to-top-btn-wrap">
+            <a href="back-to-top-btn-arrow">
+              <p class="hero-p">Back to top</p>
+              <img
+                class="arrow-up"
+                src="./assets/img/arrow-narrow-up.svg"
+                alt=""
+              />
+            </a>
+          </div>
+        </div>
+
+        <div class="mobile-fotter-links-wrap">
+          <div class="mobile-links-padding">
+            <div class="mobile-links-wrap">
+              <div class="social-links-wrap">
+                <div class="link-wrap link-wrap-1">
+                  <a class="social-links social-links-1 hero-p" href=""
+                    >Twitter</a
+                  >
+                  <span class="social-links hero-p">,</span>
+                </div>
+                <div class="link-wrap link-wrap-2">
+                  <a class="social-links social-links-2 hero-p" href=""
+                    >Linkedin</a
+                  >
+                  <span class="social-links hero-p">,</span>
+                </div>
+                <div class="link-wrap link-wrap-3">
+                  <a class="social-links social-links-3 hero-p" href=""
+                    >Github</a
+                  >
+                </div>
+              </div>
+              <p class="hero-p copytxt">©2023</p>
+            </div>
+          </div>
+        </div>
+      </footer>
     </main>
   </body>
 </html>
