activate time and date on all three pages home, work and about

--- a/work.html
+++ b/work.html
@@ -12,8 +12,12 @@
       <nav class="nav-wrap">
         <div class="header-wrap">
           <div class="time-location-wrap">
-            <span class="time-location">5:50</span>
-            <p class="time-location location-txt">Lagos, NG</p>
+            <span class="time-location" id="time-location">
+              <span class="time-location" id="hours"></span>
+              <span class="blink time-location">:</span>
+              <span class="time-location" id="minutes"></span>
+            </span>
+            <p class="time-location location-txt">WAT</p>
           </div>
           <a href="./home.html">
             <button class="main-btn">Back</button>
