--- a/home.html
+++ b/home.html
@@ -12,8 +12,12 @@
       <nav class="nav-wrap">
         <div class="header-wrap">
           <div class="time-location-wrap">
-            <span class="time-location">5:50</span>
-            <p class="time-location location-txt">Lagos, NG</p>
+            <span class="time-location" id="time-location">
+              <span class="time-location" id="hours"></span>
+              <span class="blink time-location">:</span>
+              <span class="time-location" id="minutes"></span>
+            </span>
+            <p class="time-location location-txt">WAT</p>
           </div>
           <a
             href="https://drive.google.com/file/d/17YaFGgeKxcM7r_ytoRYRtatku-OvnxOs/view?usp=sharing"
@@ -63,5 +67,6 @@
         </div>
       </div>
     </footer>
+    <script src="./assets/js/home.js"></script>
   </body>
 </html>
